--- a/assets/css/resets.css
+++ b/assets/css/resets.css
@@ -53,7 +53,7 @@ input[type="reset"] {
   }
   h2 {
      font-size: 4.8rem;
-    font-family: "Inter", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
     font-style: normal;
     text-decoration: none;
@@ -62,7 +62,7 @@ input[type="reset"] {
 
   h1 {
     font-size: 34rem;
-    font-family: "Inter", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
     font-style: normal;
     text-decoration: none;
@@ -72,7 +72,7 @@ input[type="reset"] {
 
   .text-style-h-1 {
     font-size: 15rem;
-    font-family: "Inter", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
     font-style: normal;
     text-decoration: none;
@@ -86,7 +86,7 @@ input[type="reset"] {
     }
   .text-style-h-1 {
     font-size: 15rem;
-    font-family: "Inter", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
     font-style: normal;
     text-decoration: none;
@@ -100,7 +100,7 @@ input[type="reset"] {
     }
     .text-style-h-1 {
       font-size: 6rem;
-      font-family: "Inter", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
       font-weight: 900;
       font-style: normal;
       text-decoration: none;
@@ -108,7 +108,7 @@ input[type="reset"] {
     }
   h2 {
     font-size: 3rem;
-    font-family: "Inter", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
     font-style: normal;
     text-decoration: none;
