--- a/assets/css/resets.css
+++ b/assets/css/resets.css
@@ -29,8 +29,6 @@ p {
 body {
   font-size: 2rem;
   padding-top: 10rem;
-  margin-right: 20rem;
-  margin-left: 20rem;
 }
 
 button,
@@ -94,6 +92,12 @@ input[type="reset"] {
   }
   }
 
+  @media only screen and (min-width: 1200px) {
+   body {
+    margin-right: 20rem;
+    margin-left: 20rem;
+   } 
+  }
   @media only screen and (max-width: 510px) {
     h1 {
       font-size: 10rem;
