--- a/assets/css/resets.css
+++ b/assets/css/resets.css
@@ -19,8 +19,9 @@ a:active {
 html {
   font-size: 62.5%;
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--color-white);
   min-height: 100vh;
+  color: var(--color-black);
+  background: var(--color-main);
 }
 p {
   text-align: justify;
