--- a/assets/css/resets.css
+++ b/assets/css/resets.css
@@ -20,8 +20,8 @@ html {
   font-size: 62.5%;
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
-  color: var(--color-black);
-  background: var(--color-main);
+  color: var(--color-white);
+  background: var(--color-black);
 }
 p {
   text-align: justify;
@@ -51,7 +51,7 @@ input[type="reset"] {
     padding: 2rem;
   }
   h2 {
-     font-size: 4.8rem;
+     font-size: 8rem;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 900;
     font-style: normal;
